--- a/static/css/badges.css
+++ b/static/css/badges.css
@@ -46,3 +46,16 @@ h1 {
     margin-top: 8px;
     font-size: 14px;
 }
+.badge-status {
+    font-size: 13px;
+    margin-top: 6px;
+}
+
+.achieved {
+    color: gold;
+    font-weight: bold;
+}
+
+.condition {
+    color: #ccc;
+}
