魚図鑑登録

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,12 +14,12 @@
 
     {% block bottom_nav %}
     <nav class="bottom-nav" id="bottom-nav"></nav>
-        <a href="/learn/">
-            <div class="nav-item">
-                <span>📖</span>
-                <span>ガイド</span>
-            </div>
-        </a>
+        <a href="/fish/">
+    <div class="nav-item">
+        <span>📖</span>
+        <span>魚図鑑</span>
+    </div>
+</a>
         <a href="/quests/">
             <div class="nav-item">
                 <span>📜</span>
